# diffusion-compression-lower-bounds

./: .gitignore  README.md  pyproject.toml  requirements.txt
diffusion_compression_lower_bounds/: __init__.py  core.py
proofs/: main_theorem.out  main_theorem.tex
tests/: test_core.py
