[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-compression-lower-bounds"
version = "0.1.0"
description = "Information-theoretic lower bounds for generative/diffusion-based image compression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Walker Kirkpatrick"}]
dependencies = ["numpy>=1.21", "scipy>=1.7"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["diffusion_compression_lower_bounds*"]